# conversion_calculator

./: .gitignore  README.md  app.py  pyproject.toml
docs/: original_requirements.md
src/conversion_calculator/: __init__.py
src/conversion_calculator/cli/: __init__.py
src/conversion_calculator/crosswalks/: __init__.py  cvlt_imfr.py  cvlt_ldfr.py  cvlt_ldrf.py  cvlt_sdfr.py  cvlt_summary.py  cvlt_t1.py  cvlt_t15.py  cvlt_trial.py  hvlt_ldfr.py  hvlt_summary.py  hvlt_t1.py  hvlt_trial.py  ravlt_imfr.py  ravlt_ldfr.py  ravlt_sdfr.py  ravlt_summary.py  ravlt_t1.py  ravlt_t15.py  ravlt_trial.py
src/conversion_calculator/crosswalks/rules/: __init__.py
src/conversion_calculator/errors/: __init__.py
src/conversion_calculator/lib/: __init__.py
src/conversion_calculator/models/: __init__.py  bounds.py  column.py  crosswalk.py  instrument.py  instrumentitem.py  instrumentmetadatatype.py  trial.py  valuetype.py
src/conversion_calculator/static/: cvlt_ldfr_cw.csv  cvlt_t15_cw.csv  cvlt_t1_cw.csv  hvlt_ldrf_cw.csv  ravlt_ldfr_cw.csv  ravlt_sdfr_cw.csv  ravlt_t15_cw.csv  ravlt_t1_cw.csv  verbal-learning-template.csv
tests/: conftest.py  test_basics.py  test_crosswalks.py  test_lib.py  test_models.py
tests/conversions/: test_columns.py
