[tool.poetry]
name = "conversion-calculator"
version = "0.1.0"
description = "A Python Shiny application that provides functions necessary to convert verbal learning scores."
authors = ["Jason A. Staph <jstaph@staph.us>"]
readme = "README.md"
packages = [{include = "conversion_calculator", from = "src"}]
include = ["src/conversion_calculator/static/*"]

[tool.poetry.scripts]
conversion-calculator = {callable = "conversion_calculator.cli:main", extras = ["cli"]}

[tool.poetry.dependencies]
python = "^3.9"
shiny = "^0.3.3"
htmltools = "^0.2.1"
pandas = "^2.0.1"
shinyswatch = "^0.2.3"
pydantic = "^1.10.8"
loguru = "^0.7.0"
jinja2 = "^3.1.2"
shinywidgets = "^0.2.1"
typer = {extras = ["all"], version = "^0.9.0", optional = true}
rule-engine = "^4.1.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
pytest = "^7.3.1"
isort = "^5.12.0"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"

[tool.poetry.extras]
cli = ["typer"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=conversion_calculator --cov-report=term-missing --cov-report=html --cov-report=term"
